--- a/style.css
+++ b/style.css
@@ -149,20 +149,24 @@ footer{
     }
 
     .banner img{
-    width: 200px;
+    width: 300px;
+    padding-top: 20px;
     }
     .banner-text h1{
-        font-size: 20px;
+        font-size: 40px;
         /* padding-top: -50px; */
     }
     .display-menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         padding-top: 20%;
     }
 
     .players{
-        grid-template-columns: 1fr;
-         margin-left: 10%;
-         margin-right: 20%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .card{
         width: 250px;
